--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.5.3",
-    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
@@ -47,6 +47,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
